# duckrail

./: README.md  pyproject.toml
src/: config.py  errors.py  main.py  writer.py
